# llm-vs-gpu

./: .gitignore  CMakeLists.txt  additional_plots.py  advanced_visualizations.py  build.bat  final_report.md  generate_index.py  nsight_analysis  quick_props.cu  report.docx  report_processing.py
data/: benchmark_results.csv  derived_ground_truth.csv  ground_truth.csv  hw_specs.json  llm_predictions.csv  mismatched_predictions.csv
harness/: .gitignore  benchmark_kernel.py  main.cu  test_kernel_py.py
kernels/: 00_test_kernel.cu  01_saxpy.cu  02_naive_matmul.cu  03_naive_transpose.cu  04_tiled_transpose.cu  05_bank_conflict.cu  06_strided_global.cu  07_branch_divergence.cu  08_atomic_histogram.cu  09_high_reg_pressure.cu  10_parallel_reduction.cu  11_tiled_matmul.cu
scripts/: list_models.py  predict_llms.py
visualizations/: README.md  index.html
